// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-gPEVay hhLjDi"
  >
    <table
      className="sc-iRbamj hEgTrs"
    >
      <tbody
        className="sc-gipzik iyhjGb"
      >
        <tr
          className="sc-csuQGl bwHzTh"
        >
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            US
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-csuQGl bwHzTh"
        >
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            PL
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Warsaw
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-csuQGl bwHzTh"
        >
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            DE
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Berlin
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-csuQGl bwHzTh"
        >
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            FR
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Paris
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-csuQGl bwHzTh"
        >
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            ES
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Madird
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-csuQGl bwHzTh"
        >
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            —
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-gPEVay hhLjDi"
  >
    <table
      className="sc-iRbamj hEgTrs"
    >
      <thead
        className="sc-jlyJG bbyJzT"
      >
        <tr
          className="sc-csuQGl bwHzTh"
        >
          <th
            className="sc-bRBYWo cgzDBp"
          >
            Code
          </th>
          <th
            className="sc-bRBYWo cgzDBp"
          >
            Capital
          </th>
          <th
            className="sc-bRBYWo cgzDBp"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-gipzik iyhjGb"
      >
        <tr
          className="sc-csuQGl bwHzTh"
        >
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            US
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-csuQGl bwHzTh"
        >
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            PL
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Warsaw
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-csuQGl bwHzTh"
        >
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            DE
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Berlin
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-csuQGl bwHzTh"
        >
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            FR
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Paris
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-csuQGl bwHzTh"
        >
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            ES
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Madird
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-csuQGl bwHzTh"
        >
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            —
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-gPEVay hhLjDi"
  >
    <table
      className="sc-iRbamj hEgTrs"
    >
      <thead
        className="sc-jlyJG bbyJzT"
      >
        <tr
          className="sc-csuQGl bwHzTh"
        >
          <th
            className="sc-bRBYWo cgzDBp"
          >
            #
          </th>
          <th
            className="sc-bRBYWo cgzDBp"
          >
            Code
          </th>
          <th
            className="sc-bRBYWo cgzDBp"
          >
            Capital
          </th>
          <th
            className="sc-bRBYWo cgzDBp"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-gipzik iyhjGb"
      >
        <tr
          className="sc-csuQGl bwHzTh"
        >
          <td
            className="sc-hzDkRC brgccI"
          >
            1
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            US
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-csuQGl bwHzTh"
        >
          <td
            className="sc-hzDkRC brgccI"
          >
            2
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            PL
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Warsaw
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-csuQGl bwHzTh"
        >
          <td
            className="sc-hzDkRC brgccI"
          >
            3
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            DE
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Berlin
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-csuQGl bwHzTh"
        >
          <td
            className="sc-hzDkRC brgccI"
          >
            4
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            FR
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Paris
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-csuQGl bwHzTh"
        >
          <td
            className="sc-hzDkRC brgccI"
          >
            5
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            ES
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Madird
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-csuQGl bwHzTh"
        >
          <td
            className="sc-hzDkRC brgccI"
          >
            6
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            —
          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-Rmtcm kMKOGJ"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
